remove test, fix publishConfig

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/OLMod/esbuild#readme",
   "devDependencies": {
     "esbuild": "^0.18.15"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
